# Ferrugix-OS

./: .gitignore  README.md
apt/: ferru-archive-keyring.asc  minecraft-launcher.deb
apt/dists/ferrugix/: InRelease  Release  Release.gpg
apt/pool/main/f/: ferru-bluetooth-dbgsym_0.1.0-1_amd64.deb  ferru-bluetooth_0.1.0-1_amd64.deb  ferru-branding_0.1.0-1_amd64.deb  ferru-bridge-dbgsym_0.1.0-1_amd64.deb  ferru-bridge_0.1.0-1_amd64.deb  ferru-console-dbgsym_0.1.0-1_amd64.deb  ferru-console_0.1.0-1_amd64.deb  ferru-desktop-live-dbgsym_0.1.0-1_amd64.deb  ferru-desktop-live_0.1.0-1_all.deb  ferru-desktop-live_0.1.0-1_amd64.deb  ferru-desktop-meta-dbgsym_0.1.0-1_amd64.deb  ferru-desktop-meta_0.1.0-1_all.deb  ferru-desktop-meta_0.1.0-1_amd64.deb  ferru-disks-dbgsym_0.1.0-1_amd64.deb  ferru-disks_0.1.0-1_amd64.deb  ferru-docs-dbgsym_0.1.0-1_amd64.deb  ferru-docs_0.1.0-1_amd64.deb  ferru-drivers-dbgsym_0.1.0-1_amd64.deb  ferru-drivers_0.1.0-1_amd64.deb  ferru-edit-dbgsym_0.1.0-1_amd64.deb  ferru-edit_0.1.0-1_amd64.deb  ferru-files-dbgsym_0.1.0-1_amd64.deb  ferru-files_0.1.0-1_amd64.deb  ferru-gallery-dbgsym_0.1.0-1_amd64.deb  ferru-gallery_0.1.0-1_amd64.deb  (+33 more)
ferru-wireless-applet/: Cargo.toml
ferru-wireless-applet/src/: actions.rs  lib.rs  main.rs  popover.rs  style.rs  wireless.rs
placeholders/: gnome-backgrounds_99_all.deb  libgdk-pixbuf2.0-0_99_all.deb
tmp/: Ferru temp  ferru-dm_0.1.0_amd64.deb  ferru-greeter-apply_0.1.0_amd64.deb  ferru-greeter-compositor_0.1.0_amd64.deb  ferru-greeter-settings_0.1.0_amd64.deb  ferru-greeter_0.1.0_amd64.deb
(+1 files in other folders)
